--- a/404.html
+++ b/404.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="main.css">
     <title>404</title>
 </head>
-<body>
+<body class="body_404">
     <header class="header">
     </header>
     <section class="main">
         <h1>404</h1>
         <p>your request is faild</p>
         <div class="btn_container">
-            <button  class="btn main_btn">back to app</button>
+            <a href="./index.html" class="btn main_btn">back to app</a>
         </div>
-        <span class="circle circle_big"></span>
+        <!-- <span class="circle circle_big"></span> -->
         <span class="circle circle_medium"></span>
         <span class="circle circle_small"></span>
     </section>
