adding some featurs

--- a/index.html
+++ b/index.html
@@ -38,80 +38,9 @@
               placeholder="your city"
             />
             <ul id="citySeggestionList" class="hidden citySEggestionList">
-              <!-- <li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li><li class="citySEggestionList_item">
-                <a
-                  class="citySEggestionList_item_link"
-                  onclick="showDetails(this)"
-                  href="#"
-                  >hello</a
-                >
-              </li> -->
             </ul>
           </section>
-          <section class="city_info_container">
+          <section id="city_info_container" class="city_info_container hidden">
             <div class="city_info">
               <h2 id="city_info-city" class="city_info-city">kerman,IR</h2>
               <span id="city_info-day" class="city_info-day">friday</span>
@@ -139,7 +68,7 @@
               <span id="city_degree_info" class="degree_info">+37&#x2103;</span>
             </div>
           </section>
-          <section id="week_container" class="week_info">
+          <section id="week_container" class="week_info hidden">
             <div class="day day-1">
               <figure class="day_img_container">
                 <img
