adding localStorage feature

--- a/index.html
+++ b/index.html
@@ -132,4 +132,5 @@
   <script src="./js/main.js"></script>
   <script src="./js/weekscript.js"></script>
   <script src="./js/searchingCity.js"></script>
+  <script src="./js/localstorge.js"></script>
 </html>
