--- a/index.html
+++ b/index.html
@@ -1,1 +1,129 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>weatherApp</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./main.css" />
+  </head>
+  <body>
+    <main>
+      <section class="container">
+        <article class="display_info">
+          <section class="seacrh_container">
+            <input
+              id="seacrh_input"
+              list="citySEggestionDiv"
+              type="search"
+              placeholder="your city"
+            />
+            <ul id="citySeggestionList" class="hidden citySEggestionList">
+            </ul>
+          </section>
+          <section id="city_info_container" class="city_info_container hidden">
+            <div class="city_info">
+              <h2 id="city_info-city" class="city_info-city">kerman,IR</h2>
+              <span id="city_info-day" class="city_info-day">friday</span>
+              <span id="city_info-humidity" class="city_info-humidity"
+                ><i class="fas fa-tint"></i>39%</span
+              >
+              <span id="city_info-wind_info" class="city_info-wind_info"
+                ><i class="fas fa-flag-checkered"></i>west, 7.7 m/s</span
+              >
+              <span id="city_info-pressure" class="city_info-pressure"
+                ><i class="fas fa-bullseye"></i>10003hPa</span
+              >
+            </div>
+            <div class="city_status">
+              <figure class="img_container">
+                <img
+                  id="city_status_img"
+                  class="img"
+                  src="./img/sun-img.png"
+                  alt="خورشيد پشتش به ماست مي دونستي؟؟"
+                />
+              </figure>
+            </div>
+            <div class="degree_info_container">
+              <span id="city_degree_info" class="degree_info">+37&#x2103;</span>
+            </div>
+          </section>
+          <section id="week_container" class="week_info hidden">
+            <div class="day day-1">
+              <figure class="day_img_container">
+                <img
+                  class="img"
+                  src="./img/sun-img.png"
+                  alt="خورشيد پشتش به ماست مي دونستي؟؟"
+                />
+              </figure>
+              <span class="day_name">friday</span>
+              <span class="day_degree">+37&#x2103;</span>
+            </div>
+            <div class="day day-2">
+              <figure class="day_img_container">
+                <img
+                  class="img"
+                  src="./img/sun-img.png"
+                  alt="خورشيد پشتش به ماست مي دونستي؟؟"
+                />
+              </figure>
+              <span class="day_name">friday</span>
+              <span class="day_degree">+37&#x2103;</span>
+            </div>
+            <div class="day day-3">
+              <figure class="day_img_container">
+                <img
+                  class="img"
+                  src="./img/sun-img.png"
+                  alt="خورشيد پشتش به ماست مي دونستي؟؟"
+                />
+              </figure>
+              <span class="day_name">friday</span>
+              <span class="day_degree">+37&#x2103;</span>
+            </div>
+            <div class="day day-4">
+              <figure class="day_img_container">
+                <img
+                  class="img"
+                  src="./img/sun-img.png"
+                  alt="خورشيد پشتش به ماست مي دونستي؟؟"
+                />
+              </figure>
+              <span class="day_name">friday</span>
+              <span class="day_degree">+37&#x2103;</span>
+            </div>
+            <div class="day day-5">
+              <figure class="day_img_container">
+                <img
+                  class="img"
+                  src="./img/sun-img.png"
+                  alt="خورشيد پشتش به ماست مي دونستي؟؟"
+                />
+              </figure>
+              <span class="day_name">friday</span>
+              <span class="day_degree">+37&#x2103;</span>
+            </div>
+          </section>
+        </article>
+      </section>
+    </main>
+  </body>
+  <script src="./js/main.js"></script>
+  <script src="./js/weekscript.js"></script>
+  <script src="./js/searchingCity.js"></script>
+  <script src="./js/localstorge.js"></script>
+</html>
